terraform/AKSCR/k8s/www.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www-nginx
  template:
    metadata:
      labels:
        app: www-nginx
    spec:
      containers:
        - name: www-nginx
          image: nginx
          resources:
            limits:
              cpu: 200m
              memory: 150M
            requests:
              cpu: 50m
              memory: 50M
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: www-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-services: "www-service"
spec:
  selector:
    app: www-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: cert-manager-global
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: www.mapineda48.xyz
spec:
  tls:
    - hosts:
        - www.mapineda48.xyz
      secretName: www-tls
  rules:
    - host: www.mapineda48.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www-service
                port:
                  name: http
